#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl_psana
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-04-31
2013-09-17 Andy Salnikov
- documentation generation changed in SConsTools, updating SConscript

Tag: V00-04-30
2013-08-26 Andy Salnikov
- regenerate whole thing from psddldata V00-04-32 with psddl V00-08-12

Tag: V00-04-29
2013-08-26 Andy Salnikov
- regenerate whole thing from psddldata V00-04-31 with psddl V00-08-11

Tag: V00-04-28
2013-08-14 Andy Salnikov
- regenerate whole thing from psddldata V00-04-30

Tag: V00-04-27
2013-07-15 Andy Salnikov
- re-generated with psddl V00-08-05
- removed pragma pack

Tag: V00-04-26
2013-05-22 Andy Salnikov
- regenerate whole thing from psddldata V00-04-28

Tag: V00-04-25
2013-05-15 Andy Salnikov
- regenerate whole thing from psddldata V00-04-27

Tag: V00-04-24
2013-04-25 Andy Salnikov
- regenerate whole thing from psddldata V00-04-26

Tag: V00-04-23
2013-04-23 Andy Salnikov
- regenerate whole thing from psddldata V00-04-25

Tag: V00-04-21
2013-03-29 Andy Salnikov
- regenerate whole thing from psddldata V00-04-24

Tag: V00-04-20
2013-03-28 Andy Salnikov
- regenerate whole thing from psddldata V00-04-23

Tag: V00-04-19
2013-03-25 Andy Salnikov
- regenerate whole thing from psddldata V00-04-21

Tag: V00-04-18
2013-03-25 Andy Salnikov
- regenerate whole thing from psddldata V00-04-20

Tag: V00-04-17
2013-03-24 Andy Salnikov
- regenerate whole thing from psddldata V00-04-19

Tag: V00-04-16
2013-03-22 Andy Salnikov
- regenerate whole thing from psddldata V00-04-18

Tag: V00-04-15
2013-03-22 Andy Salnikov
- regenerate whole thing from psddldata V00-04-17

Tag: V00-04-14
2013-03-22 Andy Salnikov
- regenerate whole thing from psddldata V00-04-15
