@@ -131,6 +131,56 @@ std::ostream& operator<<(std::ostream& str, Bld::BldDataEBeamV3::DamageMask enva
   }
   return str << val;
 }
+std::ostream& operator<<(std::ostream& str, Bld::BldDataEBeamV4::DamageMask enval) {
+  const char* val;
+  switch (enval) {
+  case Bld::BldDataEBeamV4::EbeamChargeDamage:
+    val = "EbeamChargeDamage";
+    break;
+  case Bld::BldDataEBeamV4::EbeamL3EnergyDamage:
+    val = "EbeamL3EnergyDamage";
+    break;
+  case Bld::BldDataEBeamV4::EbeamLTUPosXDamage:
+    val = "EbeamLTUPosXDamage";
+    break;
+  case Bld::BldDataEBeamV4::EbeamLTUPosYDamage:
+    val = "EbeamLTUPosYDamage";
+    break;
+  case Bld::BldDataEBeamV4::EbeamLTUAngXDamage:
+    val = "EbeamLTUAngXDamage";
+    break;
+  case Bld::BldDataEBeamV4::EbeamLTUAngYDamage:
+    val = "EbeamLTUAngYDamage";
+    break;
+  case Bld::BldDataEBeamV4::EbeamPkCurrBC2Damage:
+    val = "EbeamPkCurrBC2Damage";
+    break;
+  case Bld::BldDataEBeamV4::EbeamEnergyBC2Damage:
+    val = "EbeamEnergyBC2Damage";
+    break;
+  case Bld::BldDataEBeamV4::EbeamPkCurrBC1Damage:
+    val = "EbeamPkCurrBC1Damage";
+    break;
+  case Bld::BldDataEBeamV4::EbeamEnergyBC1Damage:
+    val = "EbeamEnergyBC1Damage";
+    break;
+  case Bld::BldDataEBeamV4::EbeamUndPosXDamage:
+    val = "EbeamUndPosXDamage";
+    break;
+  case Bld::BldDataEBeamV4::EbeamUndPosYDamage:
+    val = "EbeamUndPosYDamage";
+    break;
+  case Bld::BldDataEBeamV4::EbeamUndAngXDamage:
+    val = "EbeamUndAngXDamage";
+    break;
+  case Bld::BldDataEBeamV4::EbeamUndAngYDamage:
+    val = "EbeamUndAngYDamage";
+    break;
+  default:
+    return str << "DamageMask(" << int(enval) << ")";
+  }
+  return str << val;
+}
 
 BldDataIpimbV0::~BldDataIpimbV0() {}
 
@@ -145,6 +195,9 @@ BldDataGMDV0::~BldDataGMDV0() {}
 
 
 BldDataGMDV1::~BldDataGMDV1() {}
+
+
+BldDataAcqADCV1::~BldDataAcqADCV1() {}
 
 } // namespace Bld
 } // namespace Psana
